Add second dimension values to OLAP entity statistics